--- a/src/scss/components/_components.tinyMCE.scss
+++ b/src/scss/components/_components.tinyMCE.scss
@@ -145,4 +145,10 @@ body {
       background-color: rgb(243, 243, 243);
     }
   }
+
+  .mermaid {
+    div {
+      color: var(--g-textColorDark);
+    }
+  }
 }
